[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/gfx/platforms/cardbox_1.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/platforms/cardbox_3.png" type="Texture" id=2]
[ext_resource path="res://scripts/Box.gd" type="Script" id=3]
[ext_resource path="res://assets/gfx/platforms/cardbox_2.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/platforms/cardbox_4.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 29 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27, 40 )

[node name="Box" type="Node2D"]
script = ExtResource( 3 )

[node name="Box1" type="StaticBody2D" parent="."]

[node name="cardbox_1" type="Sprite" parent="Box1"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box1"]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Box2" type="StaticBody2D" parent="."]
visible = false

[node name="cardbox_2" type="Sprite" parent="Box2"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box2"]
position = Vector2( 0, 10 )
shape = SubResource( 2 )
disabled = true

[node name="Box3" type="StaticBody2D" parent="."]
visible = false

[node name="cardbox_3" type="Sprite" parent="Box3"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box3"]
position = Vector2( 1, 16 )
shape = SubResource( 3 )
disabled = true

[node name="Box4" type="StaticBody2D" parent="."]
visible = false

[node name="cardbox_4" type="Sprite" parent="Box4"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box4"]
position = Vector2( 1, 6 )
shape = SubResource( 4 )
disabled = true
